check candidates
